--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
                 </div>
                 <div class="footer-column">
                     <h3>Contact Us</h3>
-                    <p><i class="fas fa-map-marker-alt"></i> 123 Animal Way, City, State 12345</p>
-                    <p><i class="fas fa-phone"></i> (555) 123-4567</p>
+                    <p><i class="fas fa-map-marker-alt"></i> Badin, Sindh, Pakistan</p>
+                    <p><i class="fas fa-phone"></i>(+92) 3445844963</p>
                     <p><i class="fas fa-envelope"></i> info@pawsandcare.org</p>
                 </div>
                 <div class="footer-column">
